<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_board_wx_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/ic_shareboard_wx_cricle"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="@dimen/font_size_12"
            android:textColor="@color/cl_333333"
            android:text="@string/wx_friend"
            />

        <TextView
            android:id="@+id/tv_board_wx_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/ic_shareboard_wx_friend"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="@dimen/font_size_12"
            android:textColor="@color/cl_333333"
            android:text="@string/wx_circle"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/cl_e8e8e8"
        />

    <TextView
        android:id="@+id/tv_shareboard_only_cancel"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/cl_333333"
        android:text="@string/cancel"
        />

</LinearLayout>