<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/public_corners_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        tools:text="@string/tips_save_warning"
        android:textSize="@dimen/font_size_17"
        android:textColor="@color/black"
        />

    <View
        android:background="@color/cl_dividing_line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <Button
            android:id="@+id/btn_negative"
            android:gravity="center"
            tools:text="@string/no"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/cl_333333"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            />
        <View
            android:background="@color/cl_dividing_line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_positive"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"
            android:background="@null"
             />
    </LinearLayout>
</LinearLayout>
