<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.rjzd.baby.ui.activity.FindPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/login_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forget_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_25" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_edit_bg"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/phone"
            android:textColor="@color/cl_999999"
            android:textSize="@dimen/font_size_16" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:background="@color/cl_9b9b9b" />

        <com.rjzd.baby.ui.widget.edit.ClearEditText
            android:id="@+id/cet_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:maxLength="11"
            android:textColorHint="@color/cl_cccccc"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_size_15" />
    </LinearLayout>



    <TextView
        android:id="@+id/tv_gain_code"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_login_bg"
        android:gravity="center"
        android:text="@string/gain_code"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_17" />


</LinearLayout>
