<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.VideoPlayActivity">

    <com.rjzd.baby.ui.widget.videoview.SuperVideoPlayer
        android:id="@+id/video_player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/ic_toolbar_back"
        />

    <!-- 加载loading -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb_play_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/play_loading" />

        <TextView
            android:id="@+id/tv_tips_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_failed"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_15"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_play_continue_bg"
            android:text="@string/load_again"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_15"
            android:visibility="gone" />
    </LinearLayout>

    <!-- 非wifi情况下提示流量消耗 -->
    <LinearLayout
        android:id="@+id/ll_play_cost_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_tips_play_cost_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_play_with4g"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_15" />

        <Button
            android:id="@+id/btn_play_continue"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_play_continue_bg"
            android:text="@string/play_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_15" />
    </LinearLayout>

</FrameLayout>