<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/public_corners_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/baby_sex"
        android:textSize="@dimen/font_size_17"
        android:textColor="@color/cl_333333"
        />

    <!-- 选择男女的轮子 -->
    <com.rjzd.baby.ui.widget.wheel.WheelView
        android:id="@+id/wheel_view_sex"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:overScrollMode="never"
        >
    </com.rjzd.baby.ui.widget.wheel.WheelView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/cl_333333"
            android:background="@null"
            />

        <Button
            android:id="@+id/btn_sure"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="30dp"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/cl_333333"
            android:textSize="@dimen/font_size_15"
            android:background="@null"
             />
    </LinearLayout>
</LinearLayout>
