<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.AddBabyActivity">

    <com.rjzd.baby.ui.widget.ToolsbarView
        android:id="@+id/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:actionLeftBackground="@drawable/ic_toolbar_back"
        app:titleText="@string/add"
        >

    </com.rjzd.baby.ui.widget.ToolsbarView>

    <ImageView
        android:id="@+id/iv_baby_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_default_camera"
        />

    <TextView
        android:id="@+id/tv_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/cl_707070"
        android:text="@string/add_baby_photo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baby_add_name"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            >

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="12"
                android:hint="@string/hint_nickname"
                android:textSize="@dimen/font_size_15"
                android:textColor="@color/cl_333333"
                android:textColorHint="@color/cl_c7c7cd"
                android:background="@null"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cl_cccccc"
                android:layout_gravity="bottom"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baby_add_birthday"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/hint_birthday"
                android:textSize="@dimen/font_size_15"
                android:textColor="@color/cl_333333"
                android:textColorHint="@color/cl_c7c7cd"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cl_cccccc"
                android:layout_gravity="bottom"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baby_add_sex"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/hint_sex_unknown"
                android:textSize="@dimen/font_size_15"
                android:textColor="@color/cl_333333"
                android:textColorHint="@color/cl_c7c7cd"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cl_cccccc"
                android:layout_gravity="bottom"
                />
        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/white"
        android:text="@string/save"
        android:background="@drawable/shape_done_bg"
        />

</LinearLayout>