<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/member_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.rjzd.baby.ui.activity.MemberActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:textSize="@dimen/font_size_28"
    android:textColor="@color/cl_primary"
    android:layout_marginTop="100dp"
/>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="105dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_17"
        android:background="@drawable/shape_done_bg"/>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/cl_primary"
        android:textSize="@dimen/font_size_17"
        android:background="@drawable/shape_register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/other"
        android:textSize="@dimen/font_size_15"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
     >

        <ImageView
            android:id="@+id/login_wechat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/wechat_login_logo" />

        <ImageView
            android:id="@+id/login_sina"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/sina_login_logo" />

    </LinearLayout>
</LinearLayout>
